--- a/workflows/azure_blob_push.yml
+++ b/workflows/azure_blob_push.yml
@@ -1,1 +1,25 @@
+name: Push to Azure Blob Storage
+on:
+  push:
+    branches:
+      - main  # Der Name deiner Haupt-Branch (main/master) hier einfügen
 
+jobs:
+  upload:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Install Azure CLI
+      uses: azure/CLI@v1
+      with:
+        inlineScript: |
+          az extension add --name storage-preview
+          az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
+          az storage blob upload-batch --account-name your_storage_account_name --account-key your_storage_account_key --destination container_name --source path/to/your/folder  # Den richtigen Pfad zu deinem Ordner hier einfügen
+
+    - name: Cleanup Azure CLI
+      run: |
+        az extension remove --name storage-preview
+        az logout
