--- a/.github/workflows/blob_push.yml
+++ b/.github/workflows/blob_push.yml
@@ -17,7 +17,7 @@ jobs:
         inlineScript: |
           az extension add --name storage-preview
           az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
-          az storage blob upload-batch --account-name ccustodianstorage --account-key dsDs6MdFHH0a/3CsKbQzSYswAX4KhfmJsOIAVGex4mDVYMVtOyYzo3AfPwjdMWRM5Zrmppz4XDSU+AStNju0OA== --destination custodian-policies --source cloudcustodian/policies/*.yml
+          az storage blob upload-batch --account-name ccustodianstorage --account-key dsDs6MdFHH0a/3CsKbQzSYswAX4KhfmJsOIAVGex4mDVYMVtOyYzo3AfPwjdMWRM5Zrmppz4XDSU+AStNju0OA== --destination custodian-policies --source policies/*.yml
 
     - name: Cleanup Azure CLI
       run: |
